--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "bcrypt": "^5.0.0",
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
     "gh-pages": "^2.2.0",
     "is-empty": "^1.2.0",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
+    "react-avatar": "^3.9.7",
     "react-background-slideshow": "^1.0.4",
     "react-bootstrap": "^1.0.0",
     "react-date-picker": "^8.0.1",
@@ -21,8 +23,10 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
+    "react-select": "^3.1.0",
     "react-table": "^7.2.1",
     "react-time-picker": "^4.0.1",
+    "reactjs-popup": "^1.5.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.1"
