--- a/private-tutor-frontend/package.json
+++ b/private-tutor-frontend/package.json
@@ -10,9 +10,15 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "gh-pages": "^2.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "is-empty": "^1.2.0",
+    "jest": "^24.9.0",
+    "jest-cli": "^26.1.0",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.19",
     "react": "^16.13.1",
     "react-avatar": "^3.9.7",
     "react-background-slideshow": "^1.0.4",
@@ -22,7 +28,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "3.4.0",
     "react-select": "^3.1.0",
     "react-table": "^7.2.2",
     "react-time-picker": "^4.0.1",
@@ -34,7 +40,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --config ./jest.config.json",
+    "test:watch": "npm run test -- --watch",
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:5000",
