--- a/private-tutor-backend/package.json
+++ b/private-tutor-backend/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "concurrently \"npm run server\" \"cd ../private-tutor-frontend && npm start\"",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
@@ -14,9 +15,11 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.2.0",
     "cors": "^2.8.5",
+    "delay": "^4.4.0",
     "express": "^4.17.1",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^8.1.1",
     "mongoose": "^5.9.21",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
